# ascii-chat

./: -  .asan-suppressions  .bazelignore  .bazelrc  .clang  .clang-format  .clang-tidy  .clangd  .clocignore  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .lsan-suppressions  .lsan_suppressions  .macos.env  .prettierignore  .rgignore  .ubsan-suppressions  .ubsan_suppressions  .vercelignore  .ycm_extra_conf.py  AGENTS.md  ASCII_ART_INJECTION_ANALYSIS.md  ATOMIC_NAMING_AUDIT.md  AUDIO_MEMORY_LEAK_FIX.md  BUGS_AUDIT_2025.md  BUG_REPORT.md  BUILD.bazel  CALLBACK_EFFICIENCY.md  CALLBACK_OPTIMIZATION.md  CLAUDE.md  CLIENT_RECEIVE_ANALYSIS.md  CMakeLists.txt  CMakePresets.json  DEBUG_TCP_VS_WEBSOCKET_ANALYSIS.md  Dockerfile  (+118 more)
bazel/: BUILD.bazel  extensions.bzl
bazel/rules/: BUILD.bazel  defer.bzl  panic.bzl  simd_detect.bzl
bazel/scripts/: cc_wrapper.sh  format.sh
bazel/stubs/: BUILD.bazel
bazel/toolchains/: BUILD.bazel
lib/: BUILD.bazel  CMakeLists.txt  aes_hw.c  aes_hw.h  ansi_fast.c  ansi_fast.h  app_callbacks.c  ascii.c  ascii.h  ascii_simd.c  ascii_simd.h  ascii_simd_color.c  ascii_simd_neon.c  ascii_simd_neon.h  asciichat_errno.c  asciichat_errno.h  aspect_ratio.c  aspect_ratio.h  atomic.c  audio.c  audio.h  buffer_pool.c  buffer_pool.h  common.c  common.h  compression.c  compression.h  config.c  config.h  crc32.c  crc32.h  crc32_hw.c  crc32_hw.h  crypto.c  crypto.h  crypto_handshake.c  crypto_handshake.h  echo_cancel.c  echo_cancel.h  embedded_resources.c  (+76 more)
lib/acds/: database.c  database.h  session.c  session.h  strings.c
lib/audio/: CMakeLists.txt  analysis.c  analysis.h  audio.c  audio.h  audio_analysis.c  audio_analysis.h  client_audio_pipeline.c  client_audio_pipeline.cpp  client_audio_pipeline.h  client_pipeline.cpp  mixer.c  mixer.h  opus.c  opus_codec.c  opus_codec.h  packet_parsing.c  packet_parsing.h  ringbuffer.c  ringbuffer.h  wav_writer.c  wav_writer.h
lib/cmake/: libasciichat.cmake.in
lib/common/: buffer_sizes.h  error_codes.h  limits.h  string_constants.h
lib/core/: asciichat_errno.c  buffer_pool.h  ringbuffer.h  terminal_screen.c
lib/crypto/: CMakeLists.txt  README.md  acds_keys.c  acds_keys.h  constants.h  crypto.c  crypto.h  discovery_keys.c  discovery_keys.h  gpg.c  gpg.h  gpg_agent.c  gpg_agent.h  handshake.c  handshake.h  http_client.c  http_client.h  https_keys.c  https_keys.h  keys.c  keys.h  keys_validation.c  keys_validation.h  known_hosts.c  known_hosts.h  pem.c  pem_utils.c  pem_utils.h  regex.c  sha1.c  sha1.h  ssh_agent.c  ssh_agent.h
lib/debug/: CMakeLists.txt  atomic.c  backtrace.c  instrument_cov.c  instrument_log.c  instrument_log.h  lock.c  lock.h  memory.c  memory.h  mutex.c  named.c  sync.c
lib/discovery/: adjectives.c  adjectives.h  database.c  database.h  identity.c  identity.h  nouns.c  nouns.h  session.c  session.h  strings.c  strings.h
lib/image2ascii/: CMakeLists.txt  ansi.c  ansi.h  ansi_fast.c  ansi_fast.h  ascii.c  ascii.h  image.c  image.h  output_buffer.c  output_buffer.h  rle.c  rle.h
lib/log/: apple.c  asan.c  colorize.c  colorize.h  file_parser.c  filter.c  format.c  grep.c  interactive_grep.c  io.c  json.c  log.c  logging.c  logging.h  mmap.c  mmap.h  named.c  raylib.c  search.c  wasm.c  websocket.c
lib/logging/: file_parser.c  logging.c  mmap.c
lib/media/: ffmpeg_decoder.c  ffmpeg_decoder.h  ffmpeg_encoder.c  source.c  source.h  youtube.c  youtube.h  yt_dlp.c
lib/nat/: upnp.c  upnp.h
lib/network/: CMakeLists.txt  acds_client.c  acds_client.h  acds_protocol.h  av.c  av.h  client.c  client.h  client_state.c  client_state.h  compression.c  compression.h  connection_attempt.c  connection_endpoint.c  connection_factory.c  connection_handle.c  crc32.c  dns.c  endpoints.h  errors.c  errors.h  frame_validator.c  frame_validator.h  http_client.c  http_client.h  lan_discovery.c  logging.h  mdns.c  mdns.h  network.c  network.h  packet.c  packet.h  packet_parsing.c  packet_parsing.h  packet_queue.c  packet_queue.h  packet_types.h  packet_utils.c  packet_utils.h  (+6 more)
lib/options/: acds.c  acds.h  actions.c  actions.h  builder.c  builder.h  client.c  client.h  colors.c  colors.h  colorscheme.c  colorscheme.h  common.c  common.c.backup  common.h  config.c  config.h  discovery.c  discovery.h  discovery_server.c  discovery_server.h  discovery_service.c  discovery_service.h  enums.c  enums.h  groups.h  help_api.c  layout.c  layout.h  levenshtein.c  levenshtein.h  manpage.c  manpage.h  mirror.c  mirror.h  options.c  options.h  options.h.backup  parsers.c  parsers.h  (+13 more)
lib/os/: CMakeLists.txt  README.md  audio.c  audio.h  webcam.c  webcam.h
lib/pkgconfig/: libasciichat-static.pc.in  libasciichat.pc.in
lib/platform/: CMakeLists.txt  README.md  abstraction.c  abstraction.h  agent.h  api.h  cond.c  cond.h  cpu.h  file.h  filesystem.c  filesystem.h  fs.h  init.h  internal.h  keyboard.h  memory.h  mmap.h  mutex.c  mutex.h  mutex_backup.h  network.h  password.h  path.h  pipe.h  process.h  rwlock.c  rwlock.h  signal.h  socket.c  socket.h  stat.h  string.h  symbols.c  symbols.h  system.c  system.h  system_impl.c  tempfile.h  terminal.c  (+6 more)
lib/protocol/: packet_helpers.h
lib/session/: audio.c  audio.h  capture.c  capture.h  client_like.c  consensus.c  consensus_integration.c  discovery_status.c  display.c  display.h  help_screen.c  help_screen.h  host.c  host.h  keyboard_handler.c  keyboard_handler.h  participant.c  participant.h  render.c  render.h  server_like.c  server_status.c  session_log_buffer.c  settings.c  settings.h  splash.c  stdin_reader.c
lib/tests/: common.c  common.h  globals.c  logging.c  logging.h  test_env.h
lib/tooling/: CMakeLists.txt
lib/ui/: colors.c  colors.h  discovery_status.c  fps_counter.c  (+11 more)
src/: BUILD.bazel  CMakeLists.txt  client.c  main.c  main.h  server.c
tests/: BUILD.bazel  CMakeLists.txt  DOCKER_CCACHE.md  Dockerfile  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu  TESTING_NOTES.md  asan_suppressions.txt  common.h  defs.bzl  docker-compose.packages.yml  docker-compose.yml  lsan_suppressions.txt  test_runner.sh  test_version.sh
(+6215 files in other folders)
